# rpf2fivem-cli

./: .gitignore  Cargo.toml
src/: archive.rs  converter.rs  main.rs  manifest.rs
src/rpf/: crypto.rs  keys.rs  mod.rs
