[package]
name = "rpf2fivem-cli"
version = "0.1.4"
edition = "2024"
description = "Convert .rpf files to FiveM resource folders"
license = "MPL-2.0"

[[bin]]
name = "rpf2fivem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"
zip = "2"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
colored = "2"
sevenz-rust = "0.6"
tempfile = "3"
rage-rpf = "0.5.0"

[profile.release]
opt-level = 3
lto = true
